--- a/angular.json
+++ b/angular.json
@@ -122,6 +122,10 @@
               "devServerTarget": "angular-config:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
